welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:3: error: '=' expected but ';' found.
  if (c>=b>=a){ cba=true}
^